--- a/src/404.html
+++ b/src/404.html
@@ -34,7 +34,16 @@
           l.pathname
             .split("/")
             .slice(0, 1 + segmentCount)
+            .join("/") +
+          "/?p=/" +
+          l.pathname
+            .slice(1)
+            .split("/")
+            .slice(segmentCount)
             .join("/")
+            .replace(/&/g, "~and~") +
+          (l.search ? "&q=" + l.search.slice(1).replace(/&/g, "~and~") : "") +
+          l.hash
       );
     </script>
     <script defer="defer" src="/main.js"></script>
